# mikrotik-manager

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build_and_publish.yml
src/mikrotik_manager/: __init__.py  __main__.py  cli.py  core_app.py  server.py  settings.py  style.sass  worker.py
src/mikrotik_manager/tasks/: __init__.py  base.py  test.py
src/mikrotik_manager/ui/: app.py  base_layout.py  layout.py
src/mikrotik_manager/ui/pages/: __init__.py  dashboard.py
