[project]
name = "mikrotik-manager"
dynamic = ["version"]
description = "Central Management System for Mikrotik's RouterOS."
authors = [
    { name = "Julius Koenig", email = "info@bastelquartier.de" },
]
dependencies = []
requires-python = ">=3.14"
readme = "README.md"
license = { file = "LICENSE" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "file"
path = "src/mikrotik_manager/__init__.py"

[tool.pdm.scripts]
push-tags = { shell = "git push origin --tags" }
